--- a/AxiomTest.html
+++ b/AxiomTest.html
@@ -28,33 +28,20 @@
           rgb(49, 60, 76)
         );
       }
-      .my-form {
-        margin-top: 20px;
-        background-color: white;
-        height: 3rem;
-        width: 40rem;
-        padding: 0 2rem;
-        border-radius: 1.5rem;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
+
       .calc {
         margin-top: 70px;
         color: rgba(255, 255, 255, 0.8);
         font-size: 3rem;
       }
-      .helper {
-        margin-top: 70px;
-        color: rgba(255, 255, 255, 0.8);
-        font-size: 1.5rem;
-      }
       .rules {
         color: rgba(255, 255, 255, 0.8);
         margin-top: 30px;
         width: 60%;
+        text-indent: 1.5rem;
       }
       .result-button {
+        margin-top: 20px;
         outline: none;
         font-size: 1rem;
         border: none;
@@ -69,52 +56,33 @@
           rgb(68, 199, 238)
         );
       }
-      .reset-button {
-        outline: none;
-        font-size: 1rem;
-        border: none;
-        height: 3rem;
-        width: 14rem;
-        cursor: pointer;
-        color: rgba(255, 255, 255, 0.8);
-        border-radius: 1.5rem;
-        background-image: linear-gradient(
-          -45deg,
-          rgb(197, 114, 198),
-          rgb(197, 225, 118)
-        );
-      }
       .error {
         margin-top: 3px;
         color: rgb(224, 62, 62);
         opacity: 0;
+        width: 40rem;
+        text-align: center;
       }
       .answer {
         margin-top: 10px;
         color: rgba(255, 255, 255, 0.8);
         height: 2rem;
         font-size: 2rem;
-        width: 90%;
+        width: 40rem;
         padding: 5px 0 8px;
         border-radius: 1.5rem;
         text-align: center;
       }
-      .form-input {
+      .my-form {
         border: none;
         outline: none;
-        width: 80%;
         font-size: 1.5rem;
-      }
-      .form-button {
-        cursor: pointer;
-        background-color: #455150;
-        border-radius: 10px;
-        color: white;
-        height: 30px;
-        width: 15%;
-        font-size: 18px;
-        outline: none;
-        border: none;
+        margin-top: 20px;
+        background-color: white;
+        height: 3rem;
+        width: 40rem;
+        padding: 0 2rem;
+        border-radius: 1.5rem;
       }
       @media (max-width: 900px) {
         .my-form {
@@ -129,28 +97,19 @@
   <body>
     <div class="container">
       <span class="calc">Калькулятор</span>
-      <span class="helper">Введите число</span>
-      <div class="my-form">
-        <input type="text" class="form-input" />
-        <button class="form-button">Ввод</button>
-      </div>
-
+      <input type="text" class="my-form" />
       <div class="error">Ошибка ввода!</div>
       <div class="answer"></div>
-      <div style="margin-top: 20px;">
-        <button class="result-button">Получить результат!</button>
-        <button class="reset-button">Сбросить</button>
-      </div>
+      <button class="result-button">Получить результат!</button>
       <span class="rules" style="text-align: center; font-size: 1.2rem"
         >Правила</span
       >
       <p class="rules">
-        По очереди вводите числа и арифметические операции. В качестве числа
-        можно ввести любое целое число цифрами или словами числа от нуля до
-        десяти. В качестве оператора вводятся 4 основные арифметические операции
-        символами (+ ,- ,* ,/ ) или словами (плюс, минус, умножить, разделить).
-        По клавише Enter числа добавляются в выражение для последующего
-        определения результат.
+        Введите арифметическое выражение. В качестве чисел можно ввести любое
+        целое число цифрами или словами числа от нуля до десяти. В качестве
+        оператора вводятся 4 основные арифметические операции символами (+ ,- ,*
+        ,/ ) или словами. По клавише Enter проводится расчёт выражения и ответ
+        выводится на экран.
       </p>
     </div>
     <script src="app.js"></script>
